Added support to read the field list of the file